tests/ui/higher-ranked/leak-check/candidate-from-env-universe-err-1.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/candidate-from-env-universe-err-1.rs:23:5
   |
LL |     hr_bound::<&T>();
   |     ^^^^^^^^^^^^^^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     T: Trait + 'static,
   |              +++++++++

error[E0308]: mismatched types
  --> $DIR/candidate-from-env-universe-err-1.rs:23:5
   |
LL |     hr_bound::<&T>();
   |     ^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'a> <&'a &T as Trait>`
              found trait `for<'a> <&'a &'a T as Trait>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0310.
For more information about an error, try `rustc --explain E0308`.
